# trustyai

./: .gitignore  README.md  client.py  pyproject.toml
src/trustyai/: __init__.py  core.py  prompts.py
tests/: test_core.py
