[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustyai"
version = "0.1.0"
description = ""
authors = [{name = "Khanh Do", email = "dokhanh@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Add your dependencies here
]

[project.optional-dependencies]
dev = [
#     "pytest>=7.0",
#     "black",
#     "flake8",
]

[project.urls]
Homepage = "https://github.com/kndo/trustyai"
Repository = "https://github.com/kndo/trustyai"
